Correction theme + preparation pannier

--- a/src/Nfe102/Bundle/RestoBundle/Resources/public/css/style.css
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/public/css/style.css
@@ -346,6 +346,15 @@ a{
     }
 }
 
+/* include font api google */
+@font-face {
+  font-family: 'The Girl Next Door';
+  font-style: normal;
+  font-weight: 400;
+  src: local('The Girl Next Door'), local('TheGirlNextDoor'), url(../fonts/cWRA4JVGeEcHGcPl5hmX7p-yoK3Kl6E6RmvAncM23y8.woff) format('woff');
+}
+
+
 }
 
 
