--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/layout.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/layout.html.twig
@@ -6,7 +6,7 @@
 {% block css %}
        {# <link href="{{ asset('bundles/nfe102resto/css/reset.css') }}" rel="stylesheet" type="text/css" media="all" />#}
         <link href="{{ asset('bundles/nfe102resto/css/style.css') }}" rel="stylesheet" type="text/css" media="all" />
-        <link href='http://fonts.googleapis.com/css?family=The+Girl+Next+Door' rel='stylesheet' type='text/css'>
+        <!--link href='http://fonts.googleapis.com/css?family=The+Girl+Next+Door' rel='stylesheet' type='text/css'-->
 
         <style type="text/css" media="screen"></style>
         <link rel="apple-touch-icon" href=".png">
