Correction theme + preparation pannier

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
@@ -1,4 +1,10 @@
+<script type="text/javascript">
+$(function (){
+  $("#pop").popover({placement:'bottom', trigger:'hover', html: 'true' , delay: { show: 300, hide: 1000 }}); 
 
+});
+
+            </script>
 
 <h1> In Ristorante Italiano  </h1>
 
