--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/index.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/index.html.twig
@@ -3,170 +3,11 @@
 {{ parent() }}
 <script src="{{ asset('bundles/nfe102resto/js/jquery-1.10.2.min.js') }}" type="text/javascript"></script>
 <script src="{{ asset('bundles/nfe102resto/js/bootstrap.min.js') }}" type="text/javascript"></script>
-<link href="{{ asset('bundles/nfe102resto/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" /-->
-<script type="text/javascript">
-    
-    function send(){
-        val =  $('#art').val();
-        alert(val );
-        };
+<link href="{{ asset('bundles/nfe102resto/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css" />
 
-    
-    // function mod cart
-    /**
-     * paramétre more, less, del, reset
-     */
-             function modcart(param,id) {
-           
-                switch(param)
-                {
-                case 'more':
-                  url = '{{ path('nfe102_resto_moreart') }}';
-                  break;
-                case 'less':
-                  url = '{{ path('nfe102_resto_lessart') }}';
-                  break;
-                case 'del':
-                  url = '{{ path('nfe102_resto_delart') }}';
-                  break;
-               case 'reset':
-                  url = '{{ path('nfe102_resto_resetcart') }}';
-                  break;                  
-                default:
-                  alert('Error');
-                }
-           
-            $.ajax({
-                    type: 'POST',
-                    url: url,
-                    data: 'idprod='+id,
-                    success: function (ret) { 
-                        
-                        cartshow(); 
-                       // alert(ret);
-                    //$('.thisdiv').html('');    
-                  //  $('#thisdiv').load(document.URL +  '#thisdiv');
-                    }, 
-                    error: function(ret) { 
-                     //   alertview("E",mail,JSON.stringify(ret.responseText));
-                    }
-                  });  
-           
-    };
-    $(document).ready(function() {cartshow()});
-    
-    </script>    
-
-
-    <style>
-            /*
-            .Tableau span {
-                display:inline;
-                float:left;
-                border:1px solid #046380;
-                margin:0px;
-                padding:6px;
-            }
-            .Tableau p.mef {
-                clear:left;
-                margin:0px;
-                padding:0px;
-            }
-            .Tableau p.legende {font-weight:bold}
-            .Tableau span.col1 {text-align: center; width:90px;}
-            .Tableau span.col2 {text-align: center; width:90px;}
-            .Tableau span.col3 {text-align: center; width:90px;}
-
-            */
- .carousel-inner>.item>img {
-margin: 0 auto;
-height: 320px;
-}
-        </style>
-
-
-
-        <script>
-        function cartshow () {
-        $.ajax({
-        type: "POST",
-        url: "{{ path('nfe102_resto_showCart') }}",
-        dataType: 'json',
-      //  async: false,
-        success: function(cart){
-          var out =  '<div class="Tableau">' +
-                     '<p class="legende">' +
-                     '<span class="col1">Id Prod</span>' +
-                     '<span class="col2">Qte</span>' +
-                     '</p>';
-                 
-        for (var i in cart) {
-        out += '<p class="mef"><span class="col1">' + i + '</span>';
-        out += '<span class="col2">' + cart[i] + '</span>';
-        out += '<span class="col3 btn-toolbar" role="toolbar">';
-        out += '<button class="btn btn-default btn-sm glyphicon glyphicon-plus" type="button" onclick="javascript:modcart(\'more\','+ i +')" value="+"/>';
-        out += '<button class="btn btn-default btn-sm glyphicon glyphicon-minus" type="button" onclick="javascript:modcart(\'less\','+ i +')" value="-"/>';
-        out += '<button class="btn btn-default btn-sm glyphicon glyphicon-trash" type="button" onclick="javascript:modcart(\'del\','+ i +')"/>';
-        out += '</span></p>';
-    }
-    
-    out +='</div>';
-    
-    
-          $('#thisdiv').html(out);
-           // console.log(data);
-                   }
-  })}; 
-  
-$(function (){
-  $("#pop").popover({placement:'bottom', trigger:'hover', html: 'true' , delay: { show: 300, hide: 1000 }}); 
-
-});
-$(function (){
-   $('.carousel').carousel();
-});
-            </script>
 {% endblock %}            
 {% block content %}  
-   <div id="myCarousel" class="carousel slide">
-  <div class="carousel-inner">
-    <div class="item active"> <img alt="" src="{{ asset('bundles/nfe102resto/images/3-2-1-history-chicago-style.jpg') }} " height="268" width="400"/>
-      <div class="carousel-caption">
-        <p>Miam!</p>
-      </div>
-    </div>
-    <div class="item"> <img alt="" src="{{ asset('bundles/nfe102resto/images/3-2-1-history-margherita.jpg') }} " height="268" width="400"/>
-      <div class="carousel-caption">
-        <p>Miam! Miam!</p>
-      </div>
-    </div>
-    <div class="item"> <img alt="" src="{{ asset('bundles/nfe102resto/images/3-2-1-history-marinara.jpg') }} " height="268" width="400"/>
-      <div class="carousel-caption">
-        <p>Miam! Miam! Miam!</p>
-      </div>
-    </div>
-  </div>
-  <a class="carousel-control left" data-slide="prev" href="#myCarousel">‹</a> 
-  <a class="carousel-control right" data-slide="next" href="#myCarousel">›</a>
-</div>         
-            
- {#           
-    <div id="thisdiv"></div>
-    <br /><br /><br />
-        <input type="button" onclick="javascript:modcart('more',$('#art').val())" value="+"/>
-        <input type="button" onclick="javascript:modcart('less',$('#art').val())" value="-"/>
-        <input type="button" onclick="javascript:modcart('del',$('#art').val())" value="dell Art"/>
-        <input type="button" onclick="javascript:modcart('reset','')" value="vider panier"/>
-        <div id="ex">
-        <input type="text" id="art" value=""/> 
-       </div>
-        
-    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-    Connecté en tant que {{ app.user.username }} - 
-    <a href="{{ path('fos_user_security_logout') }}">Déconnexion</a>
-    
-   {% else %}
-    <a href="{{ path('fos_user_security_login') }}">Connexion</a>
-    {% render controller("FOSUserBundle:Security:login") %}
-   {% endif %}#}           
+  
+{% include 'Nfe102RestoBundle:Default:homecontent.html.twig' %}
+
 {% endblock %}
