Ajout des entités

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
@@ -4,7 +4,7 @@ $(function (){
 
 });
 
-            </script>
+</script>
 
 <h1> In Ristorante Italiano  </h1>
 
@@ -12,14 +12,13 @@ $(function (){
           data-original-title="Test du Popover">
           Cliquez sur moi pour le Popover</a> </div-->
 
-<div class="ident">     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+<div class="ident">     
+    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
     Vous êtes connecté en tant que {{ app.user.username }} - 
     <a id="pop" rel="popover" data-content="<a href='#'>Test du Popover</a>" href="{{ path('fos_user_security_logout') }}" >Déconnexion</a>
     
    {% else %}
-    <a id="pop" rel="popover" href="{{ path('fos_user_security_login') }}"
-       data-content="{#% render controller("FOSUserBundle:Security:login") %#}">Connexion</a>
-    {#% render controller("FOSUserBundle:Security:login") %#}
+    {% include 'Nfe102RestoBundle:Default:login.html.twig' %}
    {% endif %} 
 </div>
 
