--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -19,6 +19,6 @@
     <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
     <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
 
-    <input type="button" class="btn btn-danger btn-small" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+    <input type="button" class="btn btn-small" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
 </form>
 {% endblock fos_user_content %}
