--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/nav.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/nav.html.twig
@@ -1,7 +1,7 @@
 <ul>
-   <li class='vert'><a href='#'><span>Nos Menus</span></a></li>
-   <li class='vert'><a href='#'><span>Nos Pizzas</span></a></li>
-   <li class='blanc'><a href='#'><span>Nos P&acirc;tes</span></a></li>
-   <li class='blanc'><a href='#'><span>La Carte</span></a></li>
-   <li class='rouge' id="size_li"><a href='#'><span>Votre Commande</span></a></li>
+   <li class='vert'><a href='http://localhost/projNfe102/web/app_dev.php/1'><span>Nos Menus</span></a></li>
+   <li class='vert'><a href='http://localhost/projNfe102/web/app_dev.php/2'><span>Nos Pizzas</span></a></li>
+   <li class='blanc'><a href='http://localhost/projNfe102/web/app_dev.php/3'><span>Nos P&acirc;tes</span></a></li>
+   <li class='blanc'><a href='http://localhost/projNfe102/web/app_dev.php/4'><span>La Carte</span></a></li>
+   <li class='rouge' id="size_li"><a href='http://localhost/projNfe102/web/app_dev.php/5'><span>Votre Commande</span></a></li>
 </ul>
