correction fso + debut creation pannier show

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
@@ -6,7 +6,7 @@ $(function (){
 
 </script>
 
-<h1> In Ristorante Italiano  </h1>
+<h1> I Ristorante Italiano  </h1>
 
 <!--div class="well"> <a href="#" id="pop" class="btn btn-info" rel="popover" data-content="C'est tout simple à faire !" 
           data-original-title="Test du Popover">
