--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/index.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/index.html.twig
@@ -11,7 +11,7 @@
     <p>Our website is in maintenance mode. Please, come back later.</p>
 {% endif %#} 
   
-    {% if  menu == 1 %} {% include 'Nfe102RestoBundle:Default:homecontent.html.twig' %} {% endif %}
+    {% if  menu == 1 %} {% include 'Nfe102RestoBundle:Default:lesmenus.html.twig' %} {% endif %}
     {% if  menu == 2 %}  {% endif %}
     {% if  menu == 3 %} {% include 'Nfe102RestoBundle:Default:homecontent.html.twig' %} {% endif %}
     {% if  menu == 4 %} {% include 'Nfe102RestoBundle:Default:homecontent.html.twig' %} {% endif %}
