--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/layout.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/layout.html.twig
@@ -31,7 +31,9 @@
                     <div id="wrap">
 
                         <div id="sidebar">
-	{% block sidebar %}	   
+	{% block sidebar %}
+                                <p><a style="background-color:rgba(38, 153, 38, 0.8) ;" class="btn btn-default btn-sm glyphicon glyphicon-home" type="button" href="{{ path('nfe102_resto_homepage') }}"> home</a>
+                                </p>
                                 <p>in oriente aguntur, Arelate hiemem agens Constantius post theatralis ludos atque circenses ambitioso editos apparatu diem sextum idus Octobres, qui imperii eius annum tricensimum terminabat, insolentiae pondera gravius librans, siquid dubium deferebatur aut falsum, pro liquido accipiens et conperto, inter alia excarnificatum excarnificatum .</p>
 	{% endblock %}		  
                             </div>	
@@ -39,10 +41,10 @@
                             <div id="contenu">
 	    {% block content %}                 
                                     <!--<center>
-                                 <h1>Présentation</h1>-->
+                                 <h1>Présentation</h1>
                                     <p>Dum haec in oriente aguntur, Arelate hiemem agens Constantius post theatralis ludos atque circenses ambitioso editos apparatu diem sextum idus Octobres, qui imperii eius annum tricensimum terminabat, insolentiae pondera gravius librans, siquid dubium deferebatur aut falsum, pro liquido accipiens et conperto, inter alia excarnificatum Gerontium Magnentianae comitem partis exulari maerore multavit.</p>
                                     <p>Dum haec in oriente aguntur, Arelate hiemem agens Constantius post theatralis ludos atque circenses ambitioso editos apparatu diem sextum idus Octobres, qui imperii eius annum tricensimum terminabat, insolentiae pondera gravius librans, siquid dubium deferebatur aut falsum, pro liquido accipiens et conperto, inter alia excarnificatum Gerontium Magnentianae comitem </p>
-                                    <!--</center>-->
+                                    </center>-->
 	   {% endblock %}		
                                 </div>
                             </div>	
