--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -1,8 +1,5 @@
-{# src/Sdz/UserBundle/Resources/views/layout.html.twig #}
-
 {# On étend notre layout #}
-{% extends "RestoBundle:Default:layout.html.twig" %}
-
+{#%  extends 'Nfe102RestoBundle:Default:layout.html.twig' %#}
 {# Dans notre layout, il faut définir le block body #}
 {% block body %}
 
