Début ajout procédure ajout panier

--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/index.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
 {% endif %#} 
   
     {% if  menu == 1 %} {% include 'Nfe102RestoBundle:Default:lesmenus.html.twig' %} {% endif %}
-    {% if  menu == 2 %}  {% endif %}
+    {% if  menu == 2 %} {% include 'Nfe102RestoBundle:Default:pizza.html.twig' %} {% endif %}
     {% if  menu == 3 %} {% include 'Nfe102RestoBundle:Default:homecontent.html.twig' %} {% endif %}
     {% if  menu == 4 %} {% include 'Nfe102RestoBundle:Default:homecontent.html.twig' %} {% endif %}
     {% if  menu == 5 %} {% include 'Nfe102RestoBundle:Default:cart.html.twig' %} {% endif %}
