Corection bug panier vide (===)

--- a/src/Nfe102/Bundle/RestoBundle/Resources/public/css/style.css
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/public/css/style.css
@@ -29,8 +29,8 @@ h1{
 
 .ident {
     position: absolute !important;
-    right: 25% !important;
-    top: 5% !important;
+    margin-right: 10px !important;
+    top: 5px !important;
 }
 
 #prestations{
