--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.js.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.js.twig
@@ -62,7 +62,7 @@
 
              var out = ""; 
 
-if (cart != '') {
+if (cart != '' && cart !== null) {
     
     for (var i in cart) {
         //<!-- debut gene -->
