--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/User/edit.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/User/edit.html.twig
@@ -1,15 +1,16 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Produit creation</h1>
+    <h1>User edit</h1>
 
-    {{ form(form) }}
+    {{ form(edit_form) }}
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('produit') }}">
+        <a href="{{ path('user') }}">
             Back to the list
         </a>
     </li>
+    <li>{{ form(delete_form) }}</li>
 </ul>
 {% endblock %}
