--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/User/index.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/User/index.html.twig
@@ -6,25 +6,11 @@
     <table class="records_list">
         <thead>
             <tr>
-                <th>Username</th>
-                <th>Usernamecanonical</th>
-                <th>Email</th>
-                <th>Emailcanonical</th>
-                <th>Enabled</th>
-                <th>Salt</th>
-                <th>Password</th>
-                <th>Lastlogin</th>
-                <th>Locked</th>
-                <th>Expired</th>
-                <th>Expiresat</th>
-                <th>Confirmationtoken</th>
-                <th>Passwordrequestedat</th>
-                <th>Roles</th>
-                <th>Credentialsexpired</th>
-                <th>Credentialsexpireat</th>
                 <th>Id</th>
                 <th>Nomclient</th>
                 <th>Prenomclient</th>
+                <th>Mailclient</th>
+                <th>Passwordclient</th>
                 <th>Datecreateclient</th>
                 <th>Dateupdateclient</th>
                 <th>Actions</th>
@@ -33,12 +19,11 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('user_show', { 'id': entity.id }) }}">{{ entity.username }}</a></td>
-
-                <td>{{ entity.email }}</td>
-
+                <td><a href="{{ path('user_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.nomclient }}</td>
                 <td>{{ entity.prenomclient }}</td>
+                <td>{{ entity.mailclient }}</td>
+                <td>{{ entity.passwordclient }}</td>
                 <td>{% if entity.datecreateclient %}{{ entity.datecreateclient|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{% if entity.dateupdateclient %}{{ entity.dateupdateclient|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>
