--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -5,7 +5,7 @@
 
   {# On affiche les messages flash que définissent les contrôleurs du bundle #}
   {% for key, message in app.session.flashbag.all() %}
-    <div class="alert alert-{{ key }}">
+    <div class="alert alert">
       {{ message|trans({}, 'FOSUserBundle') }}
     </div>
   {% endfor %}
