--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/banniere.html.twig
@@ -1,11 +1,3 @@
-<script type="text/javascript">
-$(function (){
-  $("#pop").popover({placement:'bottom', trigger:'hover', html: 'true' , delay: { show: 300, hide: 1000 }}); 
-
-});
-
-</script>
-
 <h1> Il Ristorante Italiano  </h1>
 
 <!--div class="well"> <a href="#" id="pop" class="btn btn-info" rel="popover" data-content="C'est tout simple à faire !" 
@@ -15,13 +7,7 @@ $(function (){
 <div class="ident">     
     {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
     Vous êtes connecté en tant que {{ app.user.username }} - 
-    <a id="pop" rel="popover" 
-       data-content='<a type="button" href="{{ path('fos_user_profile_edit') }}" class="btn btn-default">
-                        <span class="glyphicon glyphicon glyphicon-user"></span> Mon compte
-                     </a>'>
-       
-       
-       href="{{ path('fos_user_security_logout') }}" >Déconnexion</a>
+    <a href="{{ path('fos_user_security_logout') }}" >Déconnexion</a>
     
    {% else %}
     {% include 'Nfe102RestoBundle:Default:login.html.twig' %}
