--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.html.twig
@@ -46,4 +46,6 @@
 
                 </table>
                 
+                <input type="button" value="Commander" class="btn btn-danger" onclick="{{ path('nfe102_resto_cmd') }}">
+                
                         
