--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -4,11 +4,11 @@
 {% block body %}
 
   {# On affiche les messages flash que définissent les contrôleurs du bundle #}
-  {% for key, message in app.session.flashbag.all() %}
+  {#% for key, message in app.session.flashbag.all() %}
     <div class="alert alert">
       {{ message|trans({}, 'FOSUserBundle') }}
     </div>
-  {% endfor %}
+  {% endfor #%}
 
   {# On définit ce block, dans lequel vont venir s'insérer les autres vues du bundle #}
   {% block fos_user_content %}
