--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/index.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/index.html.twig
@@ -1,4 +1,4 @@
-{% extends '::base.html.twig' %}
+{% extends 'Nfe102RestoBundle:Default:layout.html.twig' %}
 
 {% block body -%}
     <h1>Produit list</h1>
@@ -46,7 +46,7 @@
         <ul>
         <li>
             <a href="{{ path('produit_new') }}">
-                Create a new entry
+                Creer nouveau produit
             </a>
         </li>
     </ul>
