--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Panier/new.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Panier/new.html.twig
@@ -1,13 +1,13 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Pannier creation</h1>
+    <h1>Panier creation</h1>
 
     {{ form(form) }}
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('pannier') }}">
+        <a href="{{ path('panier') }}">
             Back to the list
         </a>
     </li>
