--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Panier/show.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Panier/show.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Pannier</h1>
+    <h1>Panier</h1>
 
     <table class="record_properties">
         <tbody>
@@ -30,12 +30,12 @@
 
         <ul class="record_actions">
     <li>
-        <a href="{{ path('pannier') }}">
+        <a href="{{ path('panier') }}">
             Back to the list
         </a>
     </li>
     <li>
-        <a href="{{ path('pannier_edit', { 'id': entity.id }) }}">
+        <a href="{{ path('panier_edit', { 'id': entity.id }) }}">
             Edit
         </a>
     </li>
