--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.js.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/cart.js.twig
@@ -70,7 +70,7 @@ if (cart != '' && cart !== null) {
                         '<td>' +
                             '<div class="produitCont">' +
                                 '<img src="{{ asset('bundles/nfe102resto/images/') }}'+ i +'.jpg" height="67" width="100" class="img-rounded"/>' +
-                                '<span>Descrition</span>' +
+                                '<span>Description</span>' +
                             '</div>' +
                         '</td>' +
                         '<td class="modeLivraison domicile">' +
