--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/index.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/index.html.twig
@@ -8,7 +8,7 @@
             <tr>
                 <th>Id</th>
                 <th>Nom</th>
-                <th>Descrition</th>
+                <th>Description</th>
                 <th>Image</th>
                 <th>Prix</th>
                 <th>Dispo</th>
@@ -22,7 +22,7 @@
             <tr>
                 <td><a href="{{ path('produit_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.nom }}</td>
-                <td>{{ entity.descrition }}</td>
+                <td>{{ entity.description }}</td>
                 <td>{{ entity.image }}</td>
                 <td>{{ entity.prix }}</td>
                 <td>{{ entity.dispo }}</td>
