--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/show.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Produit/show.html.twig
@@ -14,8 +14,8 @@
                 <td>{{ entity.nom }}</td>
             </tr>
             <tr>
-                <th>Descrition</th>
-                <td>{{ entity.descrition }}</td>
+                <th>Description</th>
+                <td>{{ entity.description }}</td>
             </tr>
             <tr>
                 <th>Image</th>
