--- a/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/pizza.html.twig
+++ b/src/Nfe102/Bundle/RestoBundle/Resources/views/Default/pizza.html.twig
@@ -6,7 +6,7 @@
         <td>
             <div class="produitCont">
                 <img src="{{ asset('bundles/nfe102resto/images/') }}78685674.jpg" height="67" width="100" class="img-rounded"/>
-                <span>Descrition</span>
+                <span>Description</span>
             </div>
         </td>
         <td>
@@ -28,7 +28,7 @@
         <td>
             <div class="produitCont">
                 <img src="{{ asset('bundles/nfe102resto/images/') }}78685675.jpg" height="67" width="100" class="img-rounded"/>
-                <span>Descrition</span>
+                <span>Description</span>
             </div>
         </td>
         <td>
